--- a/doc/theme/styles.css
+++ b/doc/theme/styles.css
@@ -31,26 +31,26 @@ a:hover
 
 body{
 	font-family : Verdana, Geneva, Arial, Helvetica, sans-serif;
-	font-size :9pt;
+	font-size :12pt;
 }
 p{
 	font-family : Verdana, Geneva, Arial, Helvetica, sans-serif;
-	font-size :10pt;
-	margin-top :10pt;
-	margin-bottom :10pt;
+	font-size :12pt;
+/*	margin-top :12pt;
+	margin-bottom :12pt;*/
 }
 
 ul{
 	font-family : Verdana, Geneva, Arial, Helvetica, sans-serif;
-	font-size :10pt;
-	margin-bottom:5pt;
-	margin-left:15pt;
+	font-size :12pt;
+/*	margin-bottom:5pt;
+	margin-left:15pt;*/
 }
 li{
 	font-family : Verdana, Geneva, Arial, Helvetica, sans-serif;
-	font-size :10pt;
-	margin-left:20pt;
-	margin-bottom :10pt;
+	font-size :12pt;
+/*	margin-left:20pt;
+	margin-bottom :10pt;*/
 }
 h1{
 	font-family : Verdana, Geneva, Arial, Helvetica, sans-serif;
