--- a/doc/theme/styles.css
+++ b/doc/theme/styles.css
@@ -36,20 +36,20 @@ body{
 	background-color :efebe7;
 }
 
+table{
+	margin-left: 10pt;
+	margin-right: 10pt;
+}
+
 td{
 	font-family : Verdana, Geneva, Arial, Helvetica, sans-serif;
 	font-size :14pt;
-	margin-left :12pt;
-	padding-right: 1em;
-	margin-right :12pt;
+	padding: 8pt;
 }
 
 tr{
 	font-family : Verdana, Geneva, Arial, Helvetica, sans-serif;
 	font-size :14pt;
-	margin-left :12pt;
-	padding-right: 1em;
-	margin-right :12pt;
 }
 
 pre{
